[package]
edition = "2018"
name = "new_debug_unreachable"
version = "2.0.0"
authors = ["Matt Brubeck <mbrubeck@limpet.net>", "Jonathan Reem <jonathan.reem@gmail.com>"]
repository = "https://github.com/mbrubeck/rust-debug-unreachable"
description = "panic in debug, intrinsics::unreachable() in release (fork of debug_unreachable)"
documentation = "https://docs.rs/new_debug_unreachable"
readme = "README.md"
license = "MIT"
